[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=7.1"]

[project]
authors = [{"name" = "R.Broderick"}]
description = "Useful when building a string from data that can be converted into a string, in parts."
version = "0.9.1"
license = {"file" = "LICENSE"}
name = "StringDataDeque"
readme = {file = "README.md", content-type = "text/markdown"}
# pep725
# [external]
# build-requires = [
# "virtual:compiler/rust",
# "virtual:compiler/cargo",
# ]
dependencies = ["beartype"]

[project.optional-dependencies]
dev = [
  "build",
  "dapperdata",
  "glom",
  "mypy",
  "pytest",
  "pytest-cov",
  "pytest-pretty",
  "ruamel.yaml",
  "ruff",
  "toml-sort",
  "uv",
  "validate-pyproject",
  "packaging",
  "Sphinx",
  "sphinx-autodoc-typehints",
  "sphinx-pyproject",
  "sphinx-rtd-size",
  "sphinx-rtd-theme ",
  "autodocsumm",
  "snakeviz",
  "pre-commit",
  "tox",
  "tox-pyenv-redux",
  # for python 3.10 and 3.11
  "typing-extensions"
]
optional = ["pycryptodome"]

[tool.dapperdata]
exclude_paths = [".venv", ".mypy_cache", ".git", ".vscode"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
exclude = [".venv", "./stringdatadeque/_version.py"]
line-length = 88

[tool.ruff.lint.isort]
force-single-line = true

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.package-data]
library = ["py.typed"]

[tool.setuptools.packages]
find = {}

[tool.sphinx-pyproject]
# -- General configuration ---------------------------------------------------
# https://www.sphinx-doc.org/en/master/usage/configuration.html#general-configuration
coverage_show_missing_items = true
extensions = [
  "sphinx.ext.autodoc",
  "sphinx_autodoc_typehints",
  "sphinx.ext.viewcode",
  "sphinx.ext.coverage",
  "autodocsumm",
  "sphinx_rtd_theme",
  'sphinx_rtd_size'
]
sphinx_rtd_size_width = "90%"
templates_path = ["_templates"]
exclude_patterns = ["_build", "Thumbs.db", ".DS_Store"]
auto_doc_default_options = {'autosummary' = true}
# -- Options for HTML output -------------------------------------------------
# https://www.sphinx-doc.org/en/master/usage/configuration.html#options-for-html-output
html_theme = "sphinx_rtd_theme"
html_style = "../../../source/custom.css"
html_static_path = ["_static"]
html_theme_options = {'display_version' = true, 'sticky_navigation' = true, 'includehidden' = true, 'titles_only' = false}
autosummary_generate = true

[tool.sphinx-pyproject.autodoc_default_options]
exclude-members = """
  __weakref__,
  __sizeof__,
  __hash__,
  __module__,
  __dict__,
  __annotations__,
  __orig_bases__,
  __parameters__,
  __abstractmethods__,
  __non_callable_proto_members__,
  __protocol_attrs__,
  __subclasshook__,
  __dataclass_fields__,
  __post_init__,
  __dataclass_params__,
  __match_args__,
  __str__,
  __repr__"""
members = true
member-order = 'bysource'
special-members = true
undoc-members = true

[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist = True
requires = tox-pyenv-redux
isolated_build = True
envlist = py310, py311, py312

[testenv]
deps =
    -rrequirements-dev.txt
    -rrequirements-optional.txt

commands =
    pytest tests
"""
